--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,9 +12,6 @@
          <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
          <% end %>
-       </ul>
-      <% end %>
-     <%= render 'list', user: current_user, book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
@@ -39,8 +36,8 @@
           <%= link_to book.title, book_path(book)  %>
           </td>
           <td> <%= book.body %></td>
+          <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %> </td>
          </tr>
-
         <% end %>
        </tbody>
       </table>
