--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,8 +30,37 @@
              <%= link_to "Destroy", book_path(@book), method: :delete %>
             <% end %>
           </td>
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+               ♥<%= @book.favorites.count %> いいね
+              <% end %>
+             <% else %>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+               ♡<%= @book.favorites.count %> いいね
+              <% end %>
+            <% end %>
+          </td>
+
         </tr>
       </table>
     </div>
   </div>
+</div>
+<div>
+  <p>コメント件数：<%= @book.book_comments.count %></p>
+  <% @book.book_comments.each do |book_comment| %>
+    <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
+    <%= book_comment.user.name %>
+    <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+    <% if book_comment.user == current_user %>
+      <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+    <% end %>
+  <% end %>
+</div>
+<div>
+  <%= form_with model: [@book, @book_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
 </div>
